<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.toorcomp.MainDownloader" >


    
    <Button
        android:id="@+id/man_dl_btn1"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="@drawable/btn"
        android:onClick="btnOnClick"
        android:text="@string/main_dl_btn1" />

    <Button
        android:id="@+id/man_dl_btn2"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_below="@+id/man_dl_btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="@drawable/btn"
        android:onClick="btnOnClick"
        android:text="@string/main_dl_btn2" />

    <Button
        android:id="@+id/man_dl_btn3"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_below="@+id/man_dl_btn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="@drawable/btn"
        android:onClick="btnOnClick"
        android:text="@string/main_dl_btn3" />

    <Button
        android:id="@+id/man_dl_btn4"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/btn"
        android:onClick="btnOnClick"
        android:text="@string/exit_btn" />

</RelativeLayout>